Fix bottom space and gaps on single post

--- a/app/assets/stylesheets/posts_show.css
+++ b/app/assets/stylesheets/posts_show.css
@@ -44,7 +44,9 @@
   flex-direction: column;
   border: 1px solid rgb(0, 0, 0, 0.4);
   box-sizing: border-box;
+  gap: 8px;
   padding: 5%;
+  margin-bottom: 16px;
 }
 
 @media only screen and (min-width: 360px) {
